# LaCAM2_fact

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Documentation.lnk  Doxyfile  LICENCE.txt  README.md  callgrind.out.12345  code_profiling_analysis.xlsx  main.cpp  out_astar.dot  partitionstest.cpp  profile.prof  stats.json  stats_2000.json  stats_MT.json  stats_MT1.json  stats_SD0.json  stats_SD1.json  stats_SD2.json  stats_SD3.json  stats_SD_0.json  stats_SD_1.json  stats_SD_2.json  stats_after.json  stats_before.json  stats_factdef.json  stats_factdef_augmented.json  stats_factpre_fails.json  stats_halflimit.json  stats_json.txt  stats_large.json  stats_large_1.json  stats_large_2.json  stats_latest.json  stats_limit.json  stats_mutex.json  stats_old.json  (+17 more)
assets/: analyze_data.py  auto_test.py  create_scen.py  dashboard.py  fact_def.py  tempCodeRunnerFile.py  test_params.json  test_vis.map  visualize_data_app.py  warehouse_small-68.scen
assets/random-32-32-10/: random-32-32-10-empty.map
assets/random-32-32-20/: random-32-32-20-empty.map  random-32-32-20-locations-unfolded.txt
assets/src/: data.py  fact_def.py  plot_layouts.py  queue.py  scenario_generator.py  score.py  testing.py  utils.py
assets/test-5-5/: test-5-5-locations-unfolded.txt  test-5-5.map
assets/warehouse-20-40-10-2-2/: warehouse-20-40-10-2-2-empty.map  warehouse-20-40-10-2-2-locations-unfolded.txt
assets/warehouse_large/: warehouse_large-empty.map  warehouse_large-goal-locations-unfolded.txt  warehouse_large-scen-base.scen  warehouse_large-start-locations-unfolded.txt
assets/warehouse_small/: warehouse_small-goal-locations-unfolded.txt
code profiling/: callgrind_astar_random_60.dot  callgrind_astar_random_60_aftermodif.out  callgrind_standard_random_60.dot  callgrind_standard_random_60.out
code_profiling/: 100_FactAstar_new.prof  100_normal.prof  300_FactDef.prof  Astar_50.prof  Astar_50_MT.prof  Astar_50_MT_16.prof  Astar_MT_OMP.prof  astar.prof  astar_mt.prof  profile.prof  standard.prof
docs/html/: README_8md.html  annotated.html  classFactAlgo.html  classFactAlgo__coll__graph.map  classFactAlgo__inherit__graph.map  classFactAlgo__inherit__graph.md5  classFactAlgo_a59571e70bad92ddd2cdd813258f0b3eb_icgraph.map  classFactAlgo_a59571e70bad92ddd2cdd813258f0b3eb_icgraph.md5  classFactAlgo_a68f79cb1ed2dda1bd5cc19723574e5fb_cgraph.map  classFactAlgo_a68f79cb1ed2dda1bd5cc19723574e5fb_cgraph.md5  classFactAlgo_a68f79cb1ed2dda1bd5cc19723574e5fb_icgraph.map  classFactAlgo_a68f79cb1ed2dda1bd5cc19723574e5fb_icgraph.md5  classFactAlgo_a96e4d312eb0b7aed8e2e0f73daf165ad_cgraph.map  classFactAlgo_a96e4d312eb0b7aed8e2e0f73daf165ad_cgraph.md5  classFactAlgo_a96e4d312eb0b7aed8e2e0f73daf165ad_icgraph.map  classFactAlgo_a96e4d312eb0b7aed8e2e0f73daf165ad_icgraph.md5  classFactAlgo_abec12f7570f1d568b5da0c5f97a71750_icgraph.map  classFactAlgo_abec12f7570f1d568b5da0c5f97a71750_icgraph.md5  classFactAstar.html  classFactAstar__coll__graph.map  classFactAstar__coll__graph.md5  classFactAstar__inherit__graph.map  classFactAstar__inherit__graph.md5  classFactBbox.html  classFactBbox__coll__graph.map  classFactBbox__coll__graph.md5  classFactBbox__inherit__graph.map  classFactBbox__inherit__graph.md5  classFactDef.html  classFactDef__coll__graph.map  classFactDef__coll__graph.md5  classFactDef__inherit__graph.map  classFactDef__inherit__graph.md5  classFactDistance.html  classFactDistance__coll__graph.map  classFactDistance__coll__graph.md5  (+402 more)
lacam2/: CMakeLists.txt
lacam2/include/: cores.hpp  dist_table.hpp  factorizer.hpp  graph.hpp  instance.hpp  lacam2.hpp  planner.hpp  post_processing.hpp  utils.hpp
lacam2/src/: dist_table.cpp  factorizer.cpp  graph.cpp  instance.cpp  lacam2.cpp  planner.cpp  post_processing.cpp  utils.cpp
(+326 files in other folders)
